Changelog for App-Magpie

{{$NEXT}}

1.110720  2011-03-13 10:46:39 Europe/Paris
 - update: allow tabs in %define upstream_version

1.110690  2011-03-10 14:00:51 Europe/Paris
 - skiplist update

1.110680  2011-03-09 12:16:27 Europe/Paris
 - new command: old
 - all commands are now dispatched in their own modules, to be able to
   require them (instead of use-ing them)

1.110590  2011-02-28 15:32:09 Europe/Paris
 - new command: config
 - config: support for --dump
 - config: support for default logging level

1.110570  2011-02-26 15:57:51 Europe/Paris
 - fixspec: insert buildrequires even if no buildarch present
 - fixspec: fetch test_requires from meta.yml as buildrequires

1.110560  2011-02-25 15:57:31 Europe/Paris
 - update: big speedup by using parse::cpan::packages::fast

1.110550  2011-02-24 16:07:55 Europe/Paris
 - update: create helper script before fixing spec file

1.110471  2011-02-16 13:47:06 Europe/Paris
 - remove cruft from tarball

1.110470  2011-02-16 13:32:14 Europe/Paris
 - fixspec: meta.yml requires can be empty

1.110410  2011-02-10 14:33:08 Europe/Paris
 - new command: update (aka refresh)
 - fixspec now sorts doc files

1.110390  2011-02-08 15:16:05 Europe/Paris
 - new command: fixspec
 - using a common logging scheme
 - deporting action logic in app::magpie

1.110320  2011-02-01 11:22:20 Europe/Paris
 - new command: checkout

1.110280  2011-01-28 12:05:48 Europe/Paris
 - better set of options for bswait command

1.110241  2011-01-24 15:37:22 Europe/Paris
  - first command: bswait